# Scrollbound

./: .gitignore  Project.xml  README.md  __main__.py  cards.json  game.py  pyproject.toml  scrolls.json
assets/data/cards/: fireball copy 3.json  fireball.json  spark.json
source/: Card.hx  CardPicker.hx  MenuState.hx  PlayState.hx  Player.hx
